# ai-image-audit

./: README.md  pyproject.toml  requirements.txt
ai_image_audit/: __init__.py  app.py  classifier.py  report.py  scanner.py  suggester.py
ai_image_audit/static/: app.js  index.html  style.css
tests/: __init__.py  test_api_routes.py  test_app_factory.py  test_classifier.py  test_report.py  test_scanner.py  test_suggester.py
